# fast-tmp-example

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
fast_tmp_example/: app.py  fast_tmp_example.sqlite3  fast_tmp_example.sqlite3-shm  fast_tmp_example.sqlite3-wal
fast_tmp_example/fast_tmp_example/: admin.py  models.py  settings.py
