[tool.poetry]
name = "fast-tmp-example"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "fast_tmp_example"}]

[tool.poetry.dependencies]
python = "^3.8"
fast-tmp = "^1.0.1"
uvicorn = "^0.18.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
