[tool.poetry]
name = "fast-tmp-example"
version = "0.1.1"
description = ""
authors = ["yuxf <yuxf@unitechs.com>"]
readme = "README.md"
packages = [{include = "fast_tmp_example"}]

[tool.poetry.dependencies]
python = "^3.8"
fast-tmp = "^1.1.7"
uvicorn = "^0.20.0"
aiofiles = "^22.1.0"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.fast-tmp]
TORTOISE_ORM = "fast_tmp_example.settings"